fix sur le  cercle du i de info-content renommage de info-box en info-content et filter-box en filter-content , correction mineur de padding / margin / gap et ajouts de commentaires

--- a/css/style.css
+++ b/css/style.css
@@ -162,14 +162,14 @@ nav a:hover{
 }
 
 /* filter selection */
-.filter-box {
+.filter-content {
     display:flex;
     align-items: center;
     gap:15px;
 }
 
  /* used class filter-box_list before removed it to simply call ul from filter-box */
-.filter-box ul {
+.filter-content ul {
     padding:0;
     list-style-type: none;
     display:flex;
@@ -178,32 +178,33 @@ nav a:hover{
     gap:15px;
 }
     /*box style */
-.filter-box li{ 
+.filter-content li{ 
     border:var(--main-bg-color) solid 2px ;
     border-radius: 25px;
     padding:0.8rem 1.2rem 0.8rem 1.2rem;  /* set box size ? */
 }
-.filter-box li:hover{
+.filter-content li:hover{
     background-color:var(--filter-bg-color); 
 }
-.filter-box i {
+.filter-content i {
     margin-right: 0.5rem;
 }
 
 /** info bar **/
-.info-box {
+.info-content {
     display:flex;
     align-items: center;
 }
 /* info icon */
-.info-box i{
-    width:40px;
-    height:24px;
-    text-align: center;
-    padding-top: 5px;
-    border:var(--main-bg-color) solid 1px;
-    border-radius: 50%;
-    margin-right: 10px; 
+.info-content i{
+    width:28px;
+    height:28px;
+    display:flex;
+    margin-right: 10px;
+    border:var(--filter-bg-color) solid 1px;
+    border-radius: 20px;
+    justify-content:center;
+    align-items: center;
 }
 
 /****** Hebergements And Populaires ***********/
@@ -240,7 +241,7 @@ nav a:hover{
 .hebergements-cards .card{
     display:flex;
     flex-direction:column;
-    gap:4px;
+    gap:10px;
 }
 /* hebergements card img */
 .hebergements-cards  img{
@@ -262,7 +263,6 @@ nav a:hover{
     gap:8px;
     padding-right:15px;
     padding-left:15px;
-    
 }
 
 /* hebergements card text */
@@ -323,7 +323,7 @@ nav a:hover{
     margin-bottom: 5px;
 }
 
-/******** Activité **********/
+/******** Activity **********/
 .activity {
     display: flex;
     flex-direction: column;
@@ -364,31 +364,33 @@ footer {
     background-color:var(--main-bg-color);
 }
 footer section{
-    margin-top: 2rem;
     display:flex;
     flex-direction: row;
-    justify-content: center;
 }
 footer .footer-box_content {
-    padding:20px;
+    padding:2rem;
     width:50%;
     display: flex;
     flex-direction: column;
     gap:20px;
 }
-/* Le code ci-dessous correspond à la version responsive uniquement */
+/* The code below corresponds to the responsive version only. */
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
-@media (max-width: 1024px) {
+@media(max-width: 1024px) {
 
     /* filter selection */
-    .filter-box {
+    .filter-content {
         display:flex;
         flex-direction: column;
         align-items:flex-start;
         gap:20px;
     }
-
+    .info-content i{
+        width:25px;
+        height:25px;
+        border:var(--filter-bg-color) solid 1px;
+    }
     .hebergements-and-populaires {
         flex-direction: column;
     }
@@ -406,6 +408,7 @@ footer .footer-box_content {
     .hebergements-cards a{
         width:32%;
     }
+    /**** populaires ****/
     .populaires {
         width: 100%;
     }
@@ -437,12 +440,13 @@ footer .footer-box_content {
 }
 
 /* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) {
+@media(max-width: 767.98px) {
     .main-container {
         
         padding:0;
     }
     /* header */
+
     header {
         display:flex;
         flex-direction: column;
@@ -450,7 +454,7 @@ footer .footer-box_content {
     }
     /* header logo */
     header img{
-        padding:15px 0 15px 0;
+        padding:1rem 0 1rem 0;
     }
     /* header nav */
     nav{
@@ -464,13 +468,13 @@ footer .footer-box_content {
     nav li{
         width:100%; /* make the two <li> centered on left side and right side */
         border-bottom:var(--main-bg-color) solid 2px;
-        padding-bottom: 1em;
+        padding-bottom: 1rem;
         font-size: 16px;
     }
     nav li:hover{
-        border-bottom:#0065FC solid 2px;
+        border-bottom:var(--main-color) solid 2px;
         color:var(--main-color);
-        padding-bottom: 1em;
+        padding-bottom: 1rem;
     }
     nav a:hover{
         border-top:none;
@@ -493,7 +497,7 @@ footer .footer-box_content {
 
     .research-form input{
         width:100%;
-        margin-right:-1rem;
+        margin-right:-1rem; /* to give effect of research input going behind the research button */
     }
     .research-form button .desktop-button{
         display: none;
@@ -504,33 +508,38 @@ footer .footer-box_content {
 
     }
     /** filter **/
-    .filter-box {
+    .filter-content {
         width:100%;
-        margin:0;
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
         align-items: start;
     }
-    .filter-box ul{
+    .filter-content ul{
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        align-items: flex-start;
         gap:10px;
         font-size: 14px;
         width:100%;
     }
-    .filter-box li{
-        margin:0;
+    /* filter box size */
+    .filter-content li{
         width:35%;
     }
+    /* info icons */
+    .info-content i{
+        min-width:25px;
+        min-height:25px;
+    }
+  
     /**** hebergement and populaires **/
     .hebergements-and-populaires {
         flex-direction: column-reverse;
     }
     .hebergements-and-populaires section {
         border-radius:0;
+        padding:20px;
     }
     /* populaires */
     .populaires-cards {
@@ -559,10 +568,9 @@ footer .footer-box_content {
     .activity-cards img{
         width:100%;
         aspect-ratio: 16/9; /* corrrect solution to make the cards height*/
+        height:100%;
     }
-    .activity-cards .card-content{
-        padding-bottom:1.5rem;
-    }
+    
     /* footer */
     .footer-content {
         flex-direction: column;
